<http://webkit.org/b/35287> ImageSourceCG::frameIsCompleteAtIndex returns false for all frames until image has completed loading

Reviewed by Geoff Garen.

CGImageSourceGetStatusAtIndex claims that all frames of a multi-frame image are incomplete when we've not yet received the
complete data for an image that is using an incremental data source (<rdar://problem/7679174>). We work around this by
special-casing all frames except the last in an image and treating them as complete if they are present and reported as
being incomplete. We do this on the assumption that loading new data can only modify the existing last frame or append new
frames. The last frame is only treated as being complete if the image source reports it as such. This ensures that it is
truly the last frame of the image rather than just the last that we currently have data for.

* platform/graphics/cg/ImageSourceCG.cpp:
(WebCore::ImageSource::frameIsCompleteAtIndex):

Canonical link: https://commits.webkit.org/46471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55169 268f45cc-cd09-0410-ab3c-d52691b4dbfc